# MageHell

./: CMakeLists.txt  todo.md
include/: bullet.h  common.h  enemy.h  player.h  raylib_extra.h
src/: bullet.cpp  enemy.cpp  main.cpp  raylib_extra.cpp
